--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -10,4 +12,101 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding-bottom: 8px;
+}
+
+header {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 48px;
+  justify-content: center;
+  align-items: center;
+  background-color: #1d3482;
+  color: #fff;
+  /* align-items: center; */
+}
+
+form {
+  display: flex;
+  margin-right: 20px;
+  height: 32px;
+}
+
+.search-field {
+  font-size: 18px;
+  height: 100%;
+  width: 320px;
+  padding: 3px;
+  border: none;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.search-button {
+  width: 32px;
+  height: 100%;
+  border: none;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background-image: url('../images/search.svg');
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.load-more {
+  display: block;
+  padding: 0;
+  margin: 0 auto;
+  min-width: 120px;
+  height: 40px;
+  cursor: pointer;
+  border: none;
+  background-color: #002dbf;
+  color: #fff;
+  font-weight: 700;
+}
+.sorry {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  padding: 56px 8px 8px;
+  justify-content: center;
+}
+
+.photo-card {
+  box-shadow: 1px 1px 2px 0px #888;
+}
+
+.photo-card:hover {
+  box-shadow: 2px 2px 4px 0px #444;
+}
+
+.gallery__image {
+  display: block;
+  width: calc((100vw - 57px) / 4);
+  height: calc((100vw - 57px) / 4 / 1.5);
+  object-fit: cover;
+}
+.gallery .info {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 4px;
+  color: #444;
+  font-size: 12px;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.gallery a {
+  text-decoration: none;
 }
